<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="156dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/cirle_user" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLines="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/remember"
            android:text="@string/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#F20404"
            android:maxLines="1"
            android:text="@string/mobile_number_or_password_is_wrong" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:padding="4dp">

        <Button
            android:id="@+id/register"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/buttom_regiter"
            android:text="@string/register_donor" />

        <Button
            android:id="@+id/login"
            android:layout_width="138dp"
            android:layout_height="50dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/buttom_input"
            android:text="@string/login" />
    </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Or"
    android:textSize="20sp"
    android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="4dp">
        <Button
            android:id="@+id/facebook"
            android:layout_width="171dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/facbook" />

        <Button
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/google"
            android:margin="6dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/Forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/search_for_donor"
        android:textColor="#000000"
        android:textSize="16sp" />
</LinearLayout>