<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="535dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_splash"
        android:contentDescription="@string/background_splash" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/down"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/white_down"
        android:contentDescription="@string/mog" />

    <ProgressBar

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="60sp" />
</RelativeLayout>